--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"ca\""
+    "email = \"car\"\n",
+    "email"
    ]
   },
   {
